[tool.poetry]
name = "snyk-metrics"
version = "0.0.1"
description = "Python library to interact transparently with Prometheus, Pushgateway and Dogstatsd."
authors = ["Luca Valentini <luca.valentini@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.7"
datadog = "^0.43.0"
prometheus-client = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.921"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 99
target_version = ["py37"]

[tool.isort]
line_length = 99
profile = "black"
